--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -42,5 +42,7 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build -f ${{ matrix.framework }} --no-restore
+    - name: check suppor sfn
+      run: fsutil behavior query disable8dot3
     - name: Test
       run: dotnet test -f ${{ matrix.framework }} --no-build --verbosity normal
