--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
+    - name: Enable SFN
+      run: fsutil behavior set disable8dot3 0
     - uses: actions/checkout@v4
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -42,7 +44,5 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build -f ${{ matrix.framework }} --no-restore
-    - name: check suppor sfn
-      run: fsutil behavior set disable8dot3 0
     - name: Test
       run: dotnet test -f ${{ matrix.framework }} --no-build --verbosity normal
