--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ windows-latest ]
+        arch: [ win-x64, win-x86 ]
         framework:
           - netstandard2.0
           - net6.0
@@ -44,6 +45,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build -f ${{ matrix.framework }} --no-restore
+      run: dotnet build SharpSevenZip/SharpSevenZip.csproj -c Release -f ${{ matrix.framework }} -r ${{ matrix.arch }} --no-restore
+    - name: Build (test)
+      if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) }}
+      run: |
+        dotnet build SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -r ${{ matrix.arch }} --no-restore
+        dotnet build SharpSevenZipBenchmarks/SharpSevenZipBenchmarks.csproj -c Release -f ${{ matrix.framework }} -r ${{ matrix.arch }} --no-restore
     - name: Test
-      run: dotnet test -f ${{ matrix.framework }} --no-build --verbosity normal
+      run: dotnet test -c Release -f ${{ matrix.framework }} -r ${{ matrix.arch }} --no-build --verbosity normal
