--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -61,11 +61,12 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build SharpSevenZip/SharpSevenZip.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
-    - name: Build (test)
+    - name: Build (Test)
       if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) }}
-      run: |
-        dotnet build SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
-        dotnet build SharpSevenZipBenchmarks/SharpSevenZipBenchmarks.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
+      run: dotnet build SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
+    - name: Build (Benchmarks)
+      if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) || !(${{ matrix.framework }} == 'net48' && ${{ matrix.arch }} == 'x64' ) }}
+      run: dotnet build SharpSevenZipBenchmarks/SharpSevenZipBenchmarks.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
     - name: Test
       if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) }}
       run: dotnet test SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-build --verbosity normal
