--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,7 +40,7 @@ jobs:
     - uses: actions/checkout@v4
     # This must be done before the normal setup-dotnet action to ensure DOTNET_ROOT refers to the 64-bit installation
     - name: Setup .NET x86
-      if: ${{ matrix.arch }} == 'x86'
+      if: ${{ matrix.arch == 'x86' }}
       uses: actions/setup-dotnet@v4
       env:
         PROCESSOR_ARCHITECTURE: x86
@@ -49,7 +49,7 @@ jobs:
         dotnet-version: ${{ matrix.sdk }}
     # Copy DOTNET_ROOT from the above step to DOTNET_ROOT(x86), the next step will overwrite DOTNET_ROOT to refer to the 64-bit installation
     - name: Set DOTNET_ROOT(x86)
-      if: ${{ matrix.arch }} == 'x86'
+      if: ${{ matrix.arch == 'x86' }}
       shell: pwsh
       run: |
         echo "DOTNET_ROOT(x86)=${env:DOTNET_ROOT}" | Out-File -FilePath $env:GITHUB_ENV -Append
