--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,11 +62,18 @@ jobs:
     - name: Build
       run: dotnet build SharpSevenZip/SharpSevenZip.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
     - name: Build (Test)
-      if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) }}
+      if: ${{ matrix.framework != 'netstandard2.0' }}
       run: dotnet build SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
+    - name: Build (Test)
+      if: ${{ matrix.framework == 'netstandard2.0' }}
+      run: dotnet build SharpSevenZip.NetStd20.Tests/SharpSevenZip.NetStd20.Tests.csproj -c Release -p:Platform=${{ matrix.arch }} --no-restore
     - name: Build (Benchmarks)
-      if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) && !(matrix.framework == 'net48' && matrix.arch == 'x64') }}
+      if: ${{ matrix.framework != 'netstandard2.0' && !(matrix.framework == 'net48' && matrix.arch == 'x64') }}
       run: dotnet build SharpSevenZipBenchmarks/SharpSevenZipBenchmarks.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
     - name: Test
-      if: ${{ !contains(fromJson('["netstandard2.0"]'), matrix.framework) }}
+      if: ${{ matrix.framework != 'netstandard2.0' }}
       run: dotnet test SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-build --verbosity normal
+    - name: Test
+      if: ${{ matrix.framework == 'netstandard2.0' }}
+      run: dotnet test SharpSevenZip.NetStd20.Tests/SharpSevenZip.NetStd20.Tests.csproj -c Release -p:Platform=${{ matrix.arch }} --no-build --verbosity normal
+
