fix for netstandard2.0 testing

--- a/SharpSevenZip/SharpSevenZip/SharpSevenZip.csproj
+++ b/SharpSevenZip/SharpSevenZip/SharpSevenZip.csproj
@@ -86,6 +86,9 @@
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
       <_Parameter1>$(AssemblyName).Tests</_Parameter1>
     </AssemblyAttribute>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>$(AssemblyName).NetStd20.Tests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
