--- a/SharpSevenZip/SharpSevenZip.Tests.MSTest/SharpSevenZip.Tests.MSTest.csproj
+++ b/SharpSevenZip/SharpSevenZip.Tests.MSTest/SharpSevenZip.Tests.MSTest.csproj
@@ -3,10 +3,16 @@
   <PropertyGroup>
     <TargetFrameworks>net10.0;net8.0;net48;net472;net462</TargetFrameworks>
     <LangVersion>latest</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MSTest" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Microsoft.VisualStudio.TestTools.UnitTesting" />
   </ItemGroup>
 
   <ItemGroup>
