--- a/SharpSevenZip/SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj
+++ b/SharpSevenZip/SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net10.0;net8.0;net6.0;net48;net472;net462</TargetFrameworks>
+    <TargetFrameworks>net8.0;net6.0;net48;net472;net462</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
