--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -65,8 +65,8 @@ jobs:
       if: ${{ matrix.framework != 'netstandard2.0' }}
       run: |
         dotnet build SharpSevenZip.Tests/SharpSevenZip.Tests.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
-        dotnet build SharpSevenZip.Tests.MSTest/SharpSevenZip.Tests.MSTest.csproj -c Release -f net472 -p:Platform=${{ matrix.arch }} --no-restore
-        dotnet build SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj -c Release -f net472 -p:Platform=${{ matrix.arch }} --no-restore
+        dotnet build SharpSevenZip.Tests.MSTest/SharpSevenZip.Tests.MSTest.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
+        dotnet build SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj -c Release -f ${{ matrix.framework }} -p:Platform=${{ matrix.arch }} --no-restore
     - name: Build (Test)
       if: ${{ matrix.framework == 'netstandard2.0' }}
       run: |
