--- a/SharpSevenZip/SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj
+++ b/SharpSevenZip/SharpSevenZip.Tests.xUnit/SharpSevenZip.Tests.xUnit.csproj
@@ -20,6 +20,10 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup Condition="'$(TargetFramework)'=='net48'">
+    <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\SharpSevenZip\SharpSevenZip.csproj" />
   </ItemGroup>
