--- a/SharpSevenZip/SharpSevenZip.NetStd20.Tests/SharpSevenZip.NetStd20.Tests.csproj
+++ b/SharpSevenZip/SharpSevenZip.NetStd20.Tests/SharpSevenZip.NetStd20.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net472</TargetFrameworks>      
+    <TargetFrameworks>net472;net462</TargetFrameworks>      
     <LangVersion>11.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
